--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	   <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByXHDk66MMx2X-O2Ae8iQ1G8VNJvyEc-8">
      </script>
-    <script type="text/javascript" src="/js/gmap.js"></script>
-        <script type="text/javascript" src="/js/timer.js"></script>
+        
+    <script src="/js/gmap.js"></script>
+        <script src="/js/timer.js"></script>
     
     </head>
 	<body>
